src/snapshots/rust_mcp_server__tool__tests__tool_json_schema_handles_multiple_properties.snap
---
source: src/tool.rs
expression: schema
---
{
    "properties": Object {
        "num": Object {
            "format": String("int32"),
            "type": String("integer"),
        },
        "opt": Object {
            "default": Null,
            "type": String("string"),
        },
    },
    "required": Array [
        String("num"),
    ],
    "title": String("Example"),
    "type": String("object"),
}
