src/snapshots/rust_mcp_server__tool__tests__tool_json_schema_removes_null_type_first.snap
---
source: src/tool.rs
expression: schema
---
{
    "properties": Object {
        "value": Object {
            "default": Null,
            "type": String("string"),
        },
    },
    "title": String("Example"),
    "type": String("object"),
}
